30-tools/squash/service.yml
apiVersion: v1
kind: Service
metadata:
  name: squash
spec:
  selector:
    app: squash
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
