30-tools/squash/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: squash
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: squash.check-consulting.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: squash
                port:
                  number: 80
  tls:
    - hosts:
        - squash.check-consulting.net
      secretName: squash-tls
